--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -96,7 +96,7 @@
                 {{ pc_form.expert|as_crispy_field }}
             </div>
             <div class="form-row">
-                <button class="btn btn-outline-success mt-2" type="submit">{% trans 'Update' %}</button>
+                <button class="btn btn-outline-success mt-2" type="submit">{% trans 'OK' %}</button>
                 <a href="{% url 'core-tdb' %}" class="btn btn-outline-info mt-2" type="cancel">{% trans 'Cancel' %}</a>
                 <a href="{% url 'user-delete' user.id %}" class="btn btn-outline-danger mt-2" type="Delete">{% trans 'Delete user' %}</a>
             </div>
