--- a/users/templates/users/weather.html
+++ b/users/templates/users/weather.html
@@ -14,13 +14,13 @@
     <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
       <div class="card-header">{{ weathers.wdate0 }}</div>
       <div class="card-body">
-        <h4 class="card-title">{{ weathers.wmain0 }}</h4>
+        <h4 class="card-title">{{ weathers.wdescription0|capfirst }}</h4>
         <div class="row">
           <div class="col">
             <img src="{% static 'img/meteo/' %}{{ weathers.wicon0 }}.png">
           </div>
           <div class="col">
-            <p class="small text-truncate">{{ weathers.wdescription0 }}<br>
+            <p class="small text-truncate">
               {% trans 'Pressure:' %} {{ weathers.wpressure0 }} hPa<br>
               {% trans 'Temp min:' %} {{ weathers.wtemp_min0.normalize }} {{ u1 }}<br>
               {% trans 'Temp max:' %} {{ weathers.wtemp_max0.normalize }} {{ u1 }}<br>
@@ -36,13 +36,13 @@
     <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
       <div class="card-header">{{ weathers.wdate1 }}</div>
       <div class="card-body">
-        <h4 class="card-title">{{ weathers.wmain1 }}</h4>
+        <h4 class="card-title">{{ weathers.wdescription1|capfirst }}</h4>
         <div class="row">
           <div class="col">
             <img src="{% static 'img/meteo/' %}{{ weathers.wicon1 }}.png">
           </div>
           <div class="col">
-            <p class="small text-truncate">{{ weathers.wdescription1 }}<br>
+            <p class="small text-truncate">
               {% trans 'Pressure:' %} {{ weathers.wpressure1 }} hPa<br>
               {% trans 'Temp min:' %} {{ weathers.wtemp_min1.normalize }} {{ u1 }}<br>
               {% trans 'Temp max:' %} {{ weathers.wtemp_max1.normalize }} {{ u1 }}<br>
@@ -58,13 +58,13 @@
     <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
       <div class="card-header">{{ weathers.wdate2 }}</div>
       <div class="card-body">
-        <h4 class="card-title">{{ weathers.wmain2 }}</h4>
+        <h4 class="card-title">{{ weathers.wdescription2|capfirst }}</h4>
         <div class="row">
           <div class="col">
             <img src="{% static 'img/meteo/' %}{{ weathers.wicon2 }}.png">
           </div>
           <div class="col">
-            <p class="small text-truncate">{{ weathers.wdescription2 }}<br>
+            <p class="small text-truncate">
               {% trans 'Pressure:' %} {{ weathers.wpressure2 }} hPa<br>
               {% trans 'Temp min:' %} {{ weathers.wtemp_min2.normalize }} {{ u1 }}<br>
               {% trans 'Temp max:' %} {{ weathers.wtemp_max2.normalize }} {{ u1 }}<br>
@@ -80,13 +80,13 @@
     <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
       <div class="card-header">{{ weathers.wdate3 }}</div>
       <div class="card-body">
-        <h4 class="card-title">{{ weathers.wmain3 }}</h4>
+        <h4 class="card-title">{{ weathers.wdescription3|capfirst }}</h4>
         <div class="row">
           <div class="col">
             <img src="{% static 'img/meteo/' %}{{ weathers.wicon3 }}.png">
           </div>
           <div class="col">
-            <p class="small text-truncate">{{ weathers.wdescription3 }}<br>
+            <p class="small text-truncate">
               {% trans 'Pressure:' %} {{ weathers.wpressure3 }} hPa<br>
               {% trans 'Temp min:' %} {{ weathers.wtemp_min3.normalize }} {{ u1 }}<br>
               {% trans 'Temp max:' %} {{ weathers.wtemp_max3.normalize }} {{ u1 }}<br>
@@ -102,13 +102,13 @@
     <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
       <div class="card-header">{{ weathers.wdate4 }}</div>
       <div class="card-body">
-        <h4 class="card-title">{{ weathers.wmain4 }}</h4>
+        <h4 class="card-title">{{ weathers.wdescription4|capfirst }}</h4>
         <div class="row">
           <div class="col">
             <img src="{% static 'img/meteo/' %}{{ weathers.wicon4 }}.png">
           </div>
           <div class="col">
-            <p class="small text-truncate">{{ weathers.wdescription4 }}<br>
+            <p class="small text-truncate">
               {% trans 'Pressure:' %} {{ weathers.wpressure4 }} hPa<br>
               {% trans 'Temp min:' %} {{ weathers.wtemp_min4.normalize }} {{ u1 }}<br>
               {% trans 'Temp max:' %} {{ weathers.wtemp_max4.normalize }} {{ u1 }}<br>
