--- a/users/templates/users/weather.html
+++ b/users/templates/users/weather.html
@@ -121,9 +121,21 @@
         </div>
       </div>
     </div>
-
     </div>
+    {% if alert %}
+      <div class="alert alert-dismissible alert-danger mt-2">
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        <h4 class="alert-heading">{% trans 'Weather alert' %}</h4>
+        <p class="mb-0">{{ weathers.alert_sender }}<br>
+          {{ weathers.alert_event }}<br>
+          From : {{ weathers.alert_start }}<br>
+          To : {{ weathers.alert_end }}<br>
+          Description : {{ weathers.alert_description }}<br>
+        </p>
+      </div>
 
+
+    {% endif%}
     {% endif %}
   </div>
 {% endblock content%}
