--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -88,6 +88,9 @@
                 <div class="col-xl">
                   {{ pc_form.insta|as_crispy_field }}
                 </div>
+                <div class="col-xl">
+                  {{ pc_form.web|as_crispy_field }}
+                </div>
             </div>
             <div class="alert alert-info">
                 {% trans 'You can hide all help messages like this one by checking the Expert box below.' %}
