--- a/users/templates/users/weather.html
+++ b/users/templates/users/weather.html
@@ -1,13 +1,15 @@
 {% extends "core/base.html" %}
 {% load i18n %}
 {% load static %}
+{% load tz %}
+
 {% block content %}
 {% load socialaccount %}
   <div class="container mt-3">
     <h1 class="mt-3">{{ title }}</h1>
     {% if not sync %}
     <div class="alert alert-warning">
-      {% trans 'No information for now. Make sure you checked the "weather" checkbox in your profile and you will get your weather here tomorrow.' %}
+      {% trans 'No information for now. Make sure you checked the "Weather alerts" checkbox in your profile and you will get your weather here tomorrow.' %}
     </div>
     {% else %}
     <div class="card-group">
@@ -128,8 +130,10 @@
         <h4 class="alert-heading">{% trans 'Weather alert' %}</h4>
         <p class="mb-0">{{ weathers.alert_sender }}<br>
           {{ weathers.alert_event }}<br>
+          {% timezone localti %}
           From : {{ weathers.alert_start }}<br>
           To : {{ weathers.alert_end }}<br>
+          {% endtimezone %}
           Description : {{ weathers.alert_description }}<br>
         </p>
       </div>
