--- a/core/templates/core/tree_detail.html
+++ b/core/templates/core/tree_detail.html
@@ -42,48 +42,50 @@
           </div>
         </div>
         {% endif %}
-        {% if tasks %}
-        <table class="table table-dark mt-2">
-            <thead>
-              <tr>
-                <th>{% trans 'Task' %}</th>
-                <th>{% trans 'Planned date' %}</th>
-                <th>{% trans 'Realisation date' %}</th>
-                <th></th>
-                <th class="d-none d-md-table-cell"></th>
-                <th class="d-none d-md-table-cell"></th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for task in tasks %}
-              <tr>
-                {% if task.treefk == tree %}
-                  <td>
-                    {{ task.tasklistfk }}
-                  </td>
-                  <td>
-                    {{ task.plan_date }}
-                  </td>
-                  <td>
-                    {{ task.real_date }}
-                  </td>
-                  <td>
-                    <a href="{% url 'task-detail' task.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Detail' %}</a>
-                  </td>
-                  <td class="d-none d-md-table-cell">
-                    <a href="{% url 'task-update' task.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Edit' %}</a>
-                  </td>
-                  <td class="d-none d-md-table-cell">
-                    <a href="{% url 'task-delete' task.id %}" class="btn btn-outline-danger btn-sm mt-1" role="button" >{% trans 'Delete' %}</a>
-                  </td>
-                {% endif %}
-            </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-        {% endif %}
-          <a href="{% url 'task-create' tree.id %}" class="btn btn-outline-success btn-sm mt-1" role="button" >{% trans 'Add task' %}</a>
+        {% if request.user == tree.ownerfk %}
+            {% if tasks %}
+            <table class="table table-dark mt-2">
+                <thead>
+                  <tr>
+                    <th>{% trans 'Task' %}</th>
+                    <th>{% trans 'Planned date' %}</th>
+                    <th>{% trans 'Realisation date' %}</th>
+                    <th></th>
+                    <th class="d-none d-md-table-cell"></th>
+                    <th class="d-none d-md-table-cell"></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for task in tasks %}
+                  <tr>
+                    {% if task.treefk == tree %}
+                      <td>
+                        {{ task.tasklistfk }}
+                      </td>
+                      <td>
+                        {{ task.plan_date }}
+                      </td>
+                      <td>
+                        {{ task.real_date }}
+                      </td>
+                      <td>
+                        <a href="{% url 'task-detail' task.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Detail' %}</a>
+                      </td>
+                      <td class="d-none d-md-table-cell">
+                        <a href="{% url 'task-update' task.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Edit' %}</a>
+                      </td>
+                      <td class="d-none d-md-table-cell">
+                        <a href="{% url 'task-delete' task.id %}" class="btn btn-outline-danger btn-sm mt-1" role="button" >{% trans 'Delete' %}</a>
+                      </td>
+                    {% endif %}
+                </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+            {% endif %}
 
+          <a href="{% url 'task-create' tree.id %}" class="btn btn-outline-success btn-sm mt-1" role="button" >{% trans 'Add task' %}</a>
+          {% endif %}
       </div>
     </div>
 </div>
