--- a/core/templates/core/membersmap.html
+++ b/core/templates/core/membersmap.html
@@ -7,9 +7,9 @@
     <h1 class="mt-3">{{ title }}</h1>
 
     <div id="members_map" class="ml-2 mr-2"></div>
-
-    <div class="alert alert-info mt-1">{% trans 'Click on the markers to get more info...' %}</div>
-
+    {% if not request.user.profile.expert %}
+        <div class="alert alert-info mt-1">{% trans 'Click on the markers to get more info...' %}</div>
+    {% endif %}
 </div>
 <script>
     var jsmembers = {};
