--- a/users/templates/users/weather.html
+++ b/users/templates/users/weather.html
@@ -26,7 +26,7 @@
               {% trans 'Pressure:' %} {{ weathers.wpressure0 }} hPa<br>
               {% trans 'Temp min:' %} {{ weathers.wtemp_min0.normalize }} {{ u1 }}<br>
               {% trans 'Temp max:' %} {{ weathers.wtemp_max0.normalize }} {{ u1 }}<br>
-              {% trans 'Wind speed:' %} {{ weathers.wwind_speed0.normalize }} {{ u2 }}}<br>
+              {% trans 'Wind speed:' %} {{ weathers.wwind_speed0.normalize }} {{ u2 }}<br>
               {% if weathers.unites == '1' %}
                 ({{ weathers.wwind_speed0kmh }}) km/h<br>
               {% endif %}
