--- a/start/templates/start/home.html
+++ b/start/templates/start/home.html
@@ -2,42 +2,72 @@
 {% load i18n %}
 {% block content %}
 {% load socialaccount %}
+<div class="container mt-3">
   {% if user.is_authenticated %}
-  <div class="container mt-3">
     <p><img class="rounded-circle" src="{{ user.socialaccount_set.all.0.get_avatar_url }}" /></p>
     <p>{% trans "Welcome, You are logged in as " %}{{ user.username }}</p>
     <p>{% trans "Your email address is " %}{{ user.email }}</p>
     <div class="googlebt1">
         <p><a class="googlebt2" href="accounts/logout/">{% trans "Logout With Google" %}</a></p>
     </div>
-  </div>
-    {% else %}
-    <div class="container mt-3">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="card text-white bg-secondary mb-3 float-left" style="max-width: 30rem;">
-            <div class="card-header">{% trans "What?" %}</div>
-            <div class="card-body">
-              <h4 class="card-title">{% trans "What is kawaïtree?" %}</h4>
-              <p class="card-text">{% trans "Kawaïtree is an app that helps you manage your bonsaï collection." %}</p>
-            </div>
+  {% else %}
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+      <div class="col">
+        <div class="card text-white bg-secondary mb-3">
+          <div class="card-header">{% trans "What?" %}</div>
+          <div class="card-body">
+            <h4 class="card-title">{% trans "What is kawaïtree?" %}</h4>
+            <p class="card-text">{% trans "Kawaïtree is an app that helps you manage your bonsaï collection." %}</p>
           </div>
         </div>
-        <div class="col-lg-6">
-          <div class="card text-white bg-secondary mb-3 float-left" style="max-width: 30rem;">
-            <div class="card-header">{% trans "How?" %}</div>
-            <div class="card-body">
-              <h4 class="card-title">{% trans "How can I create/use an account?" %}</h4>
-              <p class="card-text">{% trans "To create or use an account, just log in with Google." %}</p>
-              <div class="googlebt1">
-                <p><a class="googlebt2" href="{% provider_login_url 'google' %}">
-                {% trans "Login With Google" %}</a></p>
-              </div>
+      </div>
+      <div class="col">
+        <div class="card text-white bg-secondary mb-3">
+          <div class="card-header">{% trans "How?" %}</div>
+          <div class="card-body">
+            <h4 class="card-title">{% trans "How can I create/use an account?" %}</h4>
+            <p class="card-text">{% trans "To create or use an account, just log in with Google." %}</p>
+            <div class="googlebt1">
+              <p><a class="googlebt2" href="{% provider_login_url 'google' %}">
+              {% trans "Login With Google" %}</a></p>
             </div>
           </div>
         </div>
       </div>
     </div>
-
+    <div class="card text-white border-info mb-3">
+      <div class="card-header">{% trans 'Features' %}</div>
+      <div class="card-body">
+        <h5 class="card-title">{% trans 'Bonsaï collection management' %}</h5>
+          <ul style="list-style-type:square;">
+            <li>{% trans 'Add/modify/delete information about your trees' %}</li>
+            <li>{% trans 'Add/modify/delete photos of your trees' %}</li>
+            <li>{% trans 'Plan/do your tasks (care, maintenance, etc.)' %}</li>
+            <li>{% trans 'Add/modify/delete photos of your trees before, during and after you do your tasks' %}</li>
+          </ul>
+        <h5 class="card-title">{% trans 'Social network for Bonsaï enthousiasts' %}</h5>
+          <ul style="list-style-type:square;">
+            <li>{% trans 'Find other bonsaïka around you (on a map)' %}</li>
+            <li>{% trans 'Look at public profiles, photos of other members collection' %}</li>
+            <li>{% trans 'Contact other members (with public profiles)' %}</li>
+            <li>{% trans 'Create your profile (private or public if you want to socialize)' %}</li>
+          </ul>
+        <h5 class="card-title">{% trans 'Weather alerts' %}</h5>
+          <ul style="list-style-type:square;">
+            <li>{% trans 'Set up values (temp min and max, wind) in your profile to get weather alerts' %}</li>
+            <li>{% trans 'Check the weather in your city' %}</li>
+            <li>{% trans 'Receive emails for weather alerts' %}</li>
+          </ul>
+        <h5 class="card-title">{% trans 'Other features to come' %}</h5>
+          <ul style="list-style-type:square;">
+            <li>{% trans 'Documentation' %}</li>
+            <li>{% trans 'Tutorials' %}</li>
+            <li>{% trans 'Links (websites to buy pots, bonsaï, tools, youtube casts, documentation about bonsaÏ care and maintenance, etc.)' %}</li>
+            <li>{% trans 'Discussion groups...' %}</li>
+            <li>{% trans 'and more!' %}</li>
+          </ul>
+      </div>
+    </div>
   {% endif %}
+</div>
 {% endblock content%}
