weather tables optimized

--- a/users/templates/users/weather.html
+++ b/users/templates/users/weather.html
@@ -7,147 +7,38 @@
 {% load socialaccount %}
   <div class="container mt-3">
     <h1 class="mt-3">{{ title }}</h1>
+
     <div class="card-group">
-    <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
-      <div class="card-header">{{ weathers.wdate0 }}</div>
+    {% for weatherday in weatherdays %}
+      <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
+      <div class="card-header">{{ weatherday.wdate }}</div>
       <div class="card-body">
-        <h4 class="card-title">{{ weathers.wdescription0|capfirst }}</h4>
+        <h4 class="card-title">{{ weatherday.wdescription|capfirst }}</h4>
         <div class="row">
           <div class="col">
-            <img src="{% static 'img/meteo/' %}{{ weathers.wicon0 }}.png">
+            <img src="{% static 'img/meteo/' %}{{ weatherday.wicon }}.png">
           </div>
           <div class="col">
             <p class="small text-truncate">
-              {% trans 'Pressure:' %} {{ weathers.wpressure0 }} hPa<br>
-              {% trans 'Temp min:' %} {{ weathers.wtemp_min0.normalize }} {{ u1 }}<br>
-              {% trans 'Temp max:' %} {{ weathers.wtemp_max0.normalize }} {{ u1 }}<br>
-              {% trans 'Wind speed:' %} {{ weathers.wwind_speed0.normalize }} {{ u2 }}<br>
+              {% trans 'Pressure:' %} {{ weatherday.wpressure }} hPa<br>
+              {% trans 'Temp min:' %} {{ weatherday.wtemp_min.normalize }} {{ u1 }}<br>
+              {% trans 'Temp max:' %} {{ weatherday.wtemp_max.normalize }} {{ u1 }}<br>
+              {% trans 'Wind speed:' %} {{ weatherday.wwind_speed.normalize }} {{ u2 }}<br>
               {% if weathers.unites == '1' %}
-                ({{ weathers.wwind_speed0kmh }}) km/h<br>
+                ({{ weatherday.wwind_speedkmh }}) km/h<br>
               {% endif %}
-              {% trans 'Gusts:' %} {{ weathers.wwind_gust0.normalize }} {{ u2 }}<br>
+              {% trans 'Gusts:' %} {{ weatherday.wwind_gust.normalize }} {{ u2 }}<br>
               {% if weathers.unites == '1' %}
-                ({{ weathers.wwind_gust0kmh }}) km/h<br>
+                ({{ weatherday.wwind_gustkmh }}) km/h<br>
               {% endif %}
-              {% trans 'Humidity:' %} {{ weathers.whumidity0 }}%<br>
-              {% trans 'Rain:' %} {{ weathers.wrain0.normalize }} mm<br>
+              {% trans 'Humidity:' %} {{ weatherday.whumidity }}%<br>
+              {% trans 'Rain:' %} {{ weatherday.wrain.normalize }} mm<br>
             </p>
           </div>
         </div>
       </div>
     </div>
-    <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
-      <div class="card-header">{{ weathers.wdate1 }}</div>
-      <div class="card-body">
-        <h4 class="card-title">{{ weathers.wdescription1|capfirst }}</h4>
-        <div class="row">
-          <div class="col">
-            <img src="{% static 'img/meteo/' %}{{ weathers.wicon1 }}.png">
-          </div>
-          <div class="col">
-            <p class="small text-truncate">
-              {% trans 'Pressure:' %} {{ weathers.wpressure1 }} hPa<br>
-              {% trans 'Temp min:' %} {{ weathers.wtemp_min1.normalize }} {{ u1 }}<br>
-              {% trans 'Temp max:' %} {{ weathers.wtemp_max1.normalize }} {{ u1 }}<br>
-              {% trans 'Wind speed:' %} {{ weathers.wwind_speed1.normalize }} {{ u2 }}<br>
-              {% if weathers.unites == '1' %}
-                ({{ weathers.wwind_speed1kmh }}) km/h<br>
-              {% endif %}
-              {% trans 'Gusts:' %} {{ weathers.wwind_gust1.normalize }} {{ u2 }}<br>
-              {% if weathers.unites == '1' %}
-                ({{ weathers.wwind_gust1kmh }}) km/h<br>
-              {% endif %}
-              {% trans 'Humidity:' %} {{ weathers.whumidity1 }} %<br>
-              {% trans 'Rain:' %} {{ weathers.wrain1.normalize }}mm<br>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
-      <div class="card-header">{{ weathers.wdate2 }}</div>
-      <div class="card-body">
-        <h4 class="card-title">{{ weathers.wdescription2|capfirst }}</h4>
-        <div class="row">
-          <div class="col">
-            <img src="{% static 'img/meteo/' %}{{ weathers.wicon2 }}.png">
-          </div>
-          <div class="col">
-            <p class="small text-truncate">
-              {% trans 'Pressure:' %} {{ weathers.wpressure2 }} hPa<br>
-              {% trans 'Temp min:' %} {{ weathers.wtemp_min2.normalize }} {{ u1 }}<br>
-              {% trans 'Temp max:' %} {{ weathers.wtemp_max2.normalize }} {{ u1 }}<br>
-              {% trans 'Wind speed:' %} {{ weathers.wwind_speed2.normalize }} {{ u2 }}<br>
-              {% if weathers.unites == '1' %}
-                ({{ weathers.wwind_speed2kmh }}) km/h<br>
-              {% endif %}
-              {% trans 'Gusts:' %} {{ weathers.wwind_gust2.normalize }} {{ u2 }}<br>
-              {% if weathers.unites == '1' %}
-                ({{ weathers.wwind_gust2kmh }}) km/h<br>
-              {% endif %}
-              {% trans 'Humidity:' %} {{ weathers.whumidity2 }}%<br>
-              {% trans 'Rain:' %} {{ weathers.wrain2.normalize }} mm<br>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
-      <div class="card-header">{{ weathers.wdate3 }}</div>
-      <div class="card-body">
-        <h4 class="card-title">{{ weathers.wdescription3|capfirst }}</h4>
-        <div class="row">
-          <div class="col">
-            <img src="{% static 'img/meteo/' %}{{ weathers.wicon3 }}.png">
-          </div>
-          <div class="col">
-            <p class="small text-truncate">
-              {% trans 'Pressure:' %} {{ weathers.wpressure3 }} hPa<br>
-              {% trans 'Temp min:' %} {{ weathers.wtemp_min3.normalize }} {{ u1 }}<br>
-              {% trans 'Temp max:' %} {{ weathers.wtemp_max3.normalize }} {{ u1 }}<br>
-              {% trans 'Wind speed:' %} {{ weathers.wwind_speed3.normalize }} {{ u2 }}<br>
-              {% if weathers.unites == '1' %}
-                ({{ weathers.wwind_speed3kmh }}) km/h<br>
-              {% endif %}
-              {% trans 'Gusts:' %} {{ weathers.wwind_gust3.normalize }} {{ u2 }}<br>
-              {% if weathers.unites == '1' %}
-                ({{ weathers.wwind_gust3kmh }}) km/h<br>
-              {% endif %}
-              {% trans 'Humidity:' %} {{ weathers.whumidity3 }}%<br>
-              {% trans 'Rain:' %} {{ weathers.wrain3.normalize }} mm<br>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
-      <div class="card-header">{{ weathers.wdate4 }}</div>
-      <div class="card-body">
-        <h4 class="card-title">{{ weathers.wdescription4|capfirst }}</h4>
-        <div class="row">
-          <div class="col">
-            <img src="{% static 'img/meteo/' %}{{ weathers.wicon4 }}.png">
-          </div>
-          <div class="col">
-            <p class="small text-truncate">
-              {% trans 'Pressure:' %} {{ weathers.wpressure4 }} hPa<br>
-              {% trans 'Temp min:' %} {{ weathers.wtemp_min4.normalize }} {{ u1 }}<br>
-              {% trans 'Temp max:' %} {{ weathers.wtemp_max4.normalize }} {{ u1 }}<br>
-              {% trans 'Wind speed:' %} {{ weathers.wwind_speed4.normalize }} {{ u2 }}<br>
-              {% if weathers.unites == '1' %}
-                ({{ weathers.wwind_speed4kmh }}) km/h<br>
-              {% endif %}
-              {% trans 'Gusts:' %} {{ weathers.wwind_gust4.normalize }} {{ u2 }}<br>
-              {% if weathers.unites == '1' %}
-                ({{ weathers.wwind_gust4kmh }}) km/h<br>
-              {% endif %}
-              {% trans 'Humidity:' %} {{ weathers.whumidity4 }}%<br>
-              {% trans 'Rain:' %} {{ weathers.wrain4.normalize }} mm<br>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
+    {% endfor %}
     </div>
     {% if alert %}
       <div class="alert alert-dismissible alert-danger mt-2">
