--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -29,8 +29,7 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav me-auto">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{% trans 'Collection' %}
-            <span class="visually-hidden">(current)</span></a>
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{% trans 'Collection' %}</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="{% url 'core-tdb' %}">{% trans "Dashboard" %}</a>
             <a class="dropdown-item" href="{% url 'photo-list' user.pk %}">{% trans "All photos" %}</a>
@@ -61,7 +60,12 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{% trans "About" %}</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="{% url 'core-about' %}">{% trans "General info" %}</a>
+          {% get_current_language as LANGUAGE_CODE %}
+              {% if LANGUAGE_CODE == 'fr' %}
+                <a class="dropdown-item" href="/generalinfo/fr/">{% trans "General info" %}</a>
+              {% else %}
+                <a class="dropdown-item" href="/generalinfo/">{% trans "General info" %}</a>
+              {% endif %}
             <a class="dropdown-item" href="#">{% trans "FAQ" %}</a>
             <a class="dropdown-item" href="#">{% trans "GDPR" %}</a>
             <a class="dropdown-item" href="#">{% trans "Legal policies" %}</a>
@@ -83,7 +87,6 @@
       </ul>
     </div>
     </div>
-
   </div>
 </nav>
 </div>
@@ -95,6 +98,7 @@
         </div>
     {% endfor%}
 {% endif %}
+
 {% block content %}{% endblock %}
 &nbsp;<br>
 <div class="fluid border-top border-primary">
