--- a/start/templates/flatpages/default.html
+++ b/start/templates/flatpages/default.html
@@ -15,15 +15,6 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon-16x16.png' %}">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <!-- leaflet -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
-    <!-- Make sure you put this AFTER Leaflet's CSS -->
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
-    <!-- leaflet marker cluster -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css" crossorigin=""/>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css" crossorigin=""/>
-    <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js" crossorigin=""></script>
-
 </head>
 <body>
 <div class="container-fluid noir no-pad-no-marg">
@@ -54,8 +45,8 @@
         </li>
         {% if request.user.profile.weather is True %}
           <li class="nav-item">
-          <a class="nav-link" href="{% url 'weather' %}">{% trans "Weather" %}</a>
-        </li>
+            <a class="nav-link" href="{% url 'weather' %}">{% trans "Weather" %}</a>
+          </li>
         {% endif %}
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Members" %}</a>
@@ -94,15 +85,17 @@
   </div>
 </nav>
 </div>
-{% if messages %}
+  {% if messages %}
     {% for message in messages %}
         <div class="container alert alert-dismissible alert-{{ message.tags }} mt-3">
             <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
             {{message|safe}}
         </div>
     {% endfor%}
-{% endif %}
-{% block content %}{% endblock %}
+  {% endif %}
+<div class="container mt-3">
+    {{ flatpage.content }}
+</div>
 &nbsp;<br>
 <div class="fluid border-top border-primary">
     <p class="text-center font-weight-light small">Kawaï tree web application V 1.0 - 2022</p>
