--- a/start/templates/flatpages/default.html
+++ b/start/templates/flatpages/default.html
@@ -1,109 +1,8 @@
+{% extends "core/base.html" %}
 {% load i18n %}
 {% load static %}
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Kawaïtree</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon-16x16.png' %}">
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</head>
-<body>
-<div class="container-fluid noir no-pad-no-marg">
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary noir no-pad-no-marg">
-  <div class="container-fluid noir no-pad-no-marg">
-    <a class="navbar-brand" href="/">
-      <img src="{% static 'img/kawaiitree.jpg' %}"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarColor01">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{% trans 'Collection' %}</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="{% url 'core-tdb' %}">{% trans "Dashboard" %}</a>
-            <a class="dropdown-item" href="{% url 'photo-list' user.pk %}">{% trans "All photos" %}</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Maintenance" %}</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="{% url 'core-tasks' '1' %}">{% trans "Next tasks" %}</a>
-            <a class="dropdown-item" href="{% url 'core-tasks' '2' %}">{% trans "Overdue tasks" %}</a>
-            <a class="dropdown-item" href="{% url 'core-tasks' '3' %}">{% trans "All tasks" %}</a>
-          </div>
-        </li>
-        {% if request.user.profile.weather is True %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'weather' %}">{% trans "Weather" %}</a>
-          </li>
-        {% endif %}
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Members" %}</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="{% url 'members_map' %}">{% trans "Map" %}</a>
-            <a class="dropdown-item" href="#">{% trans "Gallery" %}</a>
-            <a class="dropdown-item" href="#">{% trans "Links" %}</a>
-            <a class="dropdown-item" href="#">{% trans "Library" %}</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{% trans "About" %}</a>
-          <div class="dropdown-menu">
-            {% get_current_language as LANGUAGE_CODE %}
-              {% if LANGUAGE_CODE == 'fr' %}
-                <a class="dropdown-item" href="/generalinfo/fr/">{% trans "General info" %}</a>
-              {% else %}
-                <a class="dropdown-item" href="/generalinfo/">{% trans "General info" %}</a>
-              {% endif %}
-            <a class="dropdown-item" href="#">{% trans "FAQ" %}</a>
-            <a class="dropdown-item" href="#">{% trans "GDPR" %}</a>
-            <a class="dropdown-item" href="#">{% trans "Legal policies" %}</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">{% trans "Contact the author" %}</a>
-          </div>
-        </li>
-      </ul>
-      <div >
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-          <a class="dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-            <img class="rounded-circle profil-pic" src="{{ user.socialaccount_set.all.0.get_avatar_url }}" alt="{% trans 'Profile' %}"/></a>
-          <div class="dropdown-menu dropdown-menu-end">
-            <a class="dropdown-item" href="{% url 'profile' %}">{% trans 'Profile' %}</a>
-            <a class="dropdown-item" href="/accounts/logout/">{% trans "Logout" %}</a>
-          </div>
-        </li>
-      </ul>
-    </div>
-    </div>
-  </div>
-</nav>
-</div>
-  {% if messages %}
-    {% for message in messages %}
-        <div class="container alert alert-dismissible alert-{{ message.tags }} mt-3">
-            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-            {{message|safe}}
-        </div>
-    {% endfor%}
-  {% endif %}
+{% block content %}
 <div class="container mt-3">
     {{ flatpage.content }}
 </div>
-&nbsp;<br>
-<div class="fluid border-top border-primary">
-    <p class="text-center font-weight-light small">Kawaï tree web application V 1.0 - 2022</p>
-</div>
-</body>
-</html>
+&nbsp;{% endblock content%}
