--- a/core/templates/core/base-leaflet.html
+++ b/core/templates/core/base-leaflet.html
@@ -62,8 +62,7 @@
           <div class="dropdown-menu">
             <a class="dropdown-item" href="{% url 'members_map' %}">{% trans "Map" %}</a>
             <a class="dropdown-item" href="{% url 'photo-listall' '0' '0' %}">{% trans "Gallery" %}</a>
-            <a class="dropdown-item" href="#">{% trans "Links" %}</a>
-            <a class="dropdown-item" href="#">{% trans "Library" %}</a>
+            <a class="dropdown-item" href="{% url 'links' %}">{% trans "Links" %}</a>
           </div>
         </li>
         <li class="nav-item dropdown">
