--- a/core/templates/core/photo_detail.html
+++ b/core/templates/core/photo_detail.html
@@ -31,7 +31,7 @@
         </div>
         <div class="row mt-2 mb-2">
           <div class="col">
-            <img src="{{ object.picture.url }}" class="autoresizeimg">
+            <img src="{{ object.picture.url }}" class="autoresizeimg" alt="Picture">
           </div>
         </div>
             {% if request.user == object.treefk.ownerfk %}
