--- a/core/templates/core/tdb.html
+++ b/core/templates/core/tdb.html
@@ -1,8 +1,8 @@
 {% extends "core/base.html" %}
 {% load i18n %}
 {% load l10n %}
+{% load socialaccount %}
 {% block content %}
-  {% load socialaccount %}
 <div class="container">
     <h1 class="mt-3">{{ content.titre }}</h1>
   {% if overduetasks %}
@@ -143,7 +143,7 @@
               <a href="{% url 'tree-delete' tree.id %}" class="btn btn-outline-danger btn-sm mb-2" role="button" >{% trans 'Delete' %}</a>
             </div>
             <div class="col">
-              <img src="{{ tree.treePic.url }}">
+              <img src="{{ tree.treePic.url }}" class="autoresizeimg" alt="Tree Picture">
             </div>
           </div>
           <table class="table table-dark mt-2">
