--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,4 +1,5 @@
 {% extends "core/base-leaflet.html" %}
+{% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 {% load i18n %}
 {% block content %}
@@ -36,9 +37,9 @@
                 <div class="col-xl">
                   {{ uc_form.username|as_crispy_field }}
                 </div>
-                <div class="col-xl">
-                  {{ uc_form.email|as_crispy_field }}
-                </div>
+{#                <div class="col-xl">#}
+{#                  {{ uc_form.email|as_crispy_field }}#}
+{#                </div>#}
             </div>
             {% if not request.user.profile.expert %}
             <div class="alert alert-warning">
