--- a/core/templates/core/link_list.html
+++ b/core/templates/core/link_list.html
@@ -23,10 +23,10 @@
         <div class="accordion-body">
             {% for link in category.list %}
                 <div class="row border border-light mb-2">
-                    <div class="col md-inline-block mt-1 mb-1">
+                    <div class="col mt-1 mb-1">
                     <a href="{{ link.url }}" target="_blank" rel="noopener noreferrer"><img src="{{ link.image.url }}" class="autoresizeimg" alt="{{ link.name }} logo"></a>
                     </div>
-                    <div class="col md-inline-block d-md-flex align-items-center">
+                    <div class="col d-md-flex align-items-center">
                         <p><strong></strong><a href="{{ link.url }}" target="_blank" rel="noopener noreferrer">{{ link.name }}</a><br>
                         <small>{{ link.description }}</small></p>
                     </div>
