--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -5,6 +5,7 @@
 {% block content %}
 {% load socialaccount %}
     <div class="container mt-3">
+    <p>socialaccount : {{ user.socialaccount_set.all.0 }}</p>
         <div class="row">
             <div class="col col-xs-auto">
                 {% if user.socialaccount_set.all.0.get_avatar_url %}
@@ -37,9 +38,6 @@
                 <div class="col-xl">
                   {{ uc_form.username|as_crispy_field }}
                 </div>
-{#                <div class="col-xl">#}
-{#                  {{ uc_form.email|as_crispy_field }}#}
-{#                </div>#}
             </div>
             {% if not request.user.profile.expert %}
             <div class="alert alert-warning">
